KIBON-3275: use fileuploadservice bean